- change android app settings for AssetUpload

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ android {
     compileSdkVersion 22
     buildToolsVersion "23.0.0 rc2"
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
     defaultConfig {
         applicationId "com.example.amps.fyp_amps_android_yishan"
         minSdkVersion 15
@@ -22,4 +30,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:22.0.+'
 }
