--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.amps.fyp_amps_android_yishan"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="16"
+        android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,16 +16,16 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
         android:screenOrientation="portrait"
-        android:hardwareAccelerated="false">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:screenOrientation="portrait"
-            android:hardwareAccelerated="false">
+            android:hardwareAccelerated="false"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,21 +34,33 @@
         </activity>
         <activity
             android:name=".ProjectListActivity"
+            android:hardwareAccelerated="false"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:hardwareAccelerated="false">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".BaseActivity"
+            android:hardwareAccelerated="false"
             android:label="@string/title_activity_base"
-            android:screenOrientation="portrait"
-            android:hardwareAccelerated="false">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ProjectDetailsActivity"
+            android:hardwareAccelerated="false"
             android:label="@string/title_activity_project_details"
-            android:screenOrientation="portrait"
-            android:hardwareAccelerated="false">
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".AssetDetailActivity"
+            android:label="@string/title_activity_asset_detail" >
+        </activity>
+        <activity
+            android:name=".ImageReviewFullScreenActivity"
+            android:label="@string/title_activity_image_review_full_screen" >
+        </activity>
+        <activity
+            android:name=".AssetUploadActivity"
+            android:label="@string/title_activity_asset_upload" >
         </activity>
     </application>
 
