--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,18 +25,20 @@
             android:name=".LoginActivity"
             android:hardwareAccelerated="false"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:configChanges="orientation|screenSize|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- android:screenOrientation="portrait" can be used to solve the screen orientation changes-->
         <activity
             android:name=".ProjectListActivity"
             android:hardwareAccelerated="false"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:configChanges="orientation|screenSize|keyboardHidden" >
         </activity>
         <activity
             android:name=".BaseActivity"
@@ -48,19 +50,23 @@
             android:name=".ProjectDetailsActivity"
             android:hardwareAccelerated="false"
             android:label="@string/title_activity_project_details"
-            android:screenOrientation="portrait" >
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            >
         </activity>
         <activity
             android:name=".AssetDetailActivity"
-            android:label="@string/title_activity_asset_detail" >
+            android:label="@string/title_activity_asset_detail"
+            android:configChanges="orientation|screenSize|keyboardHidden" >
         </activity>
         <activity
             android:name=".ImageReviewFullScreenActivity"
-            android:label="@string/title_activity_image_review_full_screen" >
+            android:label="@string/title_activity_image_review_full_screen"
+            android:configChanges="orientation|screenSize|keyboardHidden">
         </activity>
         <activity
             android:name=".AssetUploadActivity"
-            android:label="@string/title_activity_asset_upload" >
+            android:label="@string/title_activity_asset_upload"
+            android:configChanges="orientation|screenSize|keyboardHidden">
         </activity>
     </application>
 
