- done:  simple image preview and video preview are done - todo: file types of video, audio, image can be uploaded, but others cannot - todo: need to modify image preview to support a higher accuracy

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,8 +59,13 @@
             android:configChanges="orientation|screenSize|keyboardHidden" >
         </activity>
         <activity
-            android:name=".ImageReviewFullScreenActivity"
+            android:name=".preview.ImageReviewFullScreenActivity"
             android:label="@string/title_activity_image_review_full_screen"
+            android:configChanges="orientation|screenSize|keyboardHidden">
+        </activity>
+        <activity
+            android:name=".preview.VideoPlayerActivity"
+            android:label="@string/title_activity_video_player_activity"
             android:configChanges="orientation|screenSize|keyboardHidden">
         </activity>
         <activity
